--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <!-- Top Nav -->
     <header class="site-header">
       <div class="container header-inner">
-        <a class="brand" href="#">
-          <span class="brand-title">Wang lab@Columbia</span>
+        <a class="brand" href="index.html">
+          <img src="images/logo.jpg" alt="Wang Lab logo" class="brand-logo">
         </a>
 
         <nav class="nav" aria-label="Primary navigation">
-          <a href="#home" class="nav-link">Home</a>
-          <a href="#research" class="nav-link">Research</a>
-          <a href="#team" class="nav-link">Team</a>
-          <a href="#publications" class="nav-link">Publication</a>
-          <a href="#news" class="nav-link">News</a>
-          <a href="#funding" class="nav-link">Funding</a>
-          <a href="#contact" class="nav-link">Contact & Openings</a>
+          <a href="index.html" class="nav-link">Home</a>
+          <a href="research.html" class="nav-link">Research</a>
+          <a href="team.html" class="nav-link">Team</a>
+          <a href="publications.html" class="nav-link">Publication</a>
+          <a href="news.html" class="nav-link">News</a>
+          <a href="funding.html" class="nav-link">Funding</a>
+          <a href="contact.html" class="nav-link">Contact & Openings</a>
         </nav>
 
         <button class="nav-toggle" aria-label="Open menu" aria-expanded="false">
@@ -46,16 +46,13 @@
             <div class="slide">
               <img src="images/hero3.jpg" alt="Lab hero image 3" />
             </div>
-            <div class="slide">
-              <img src="images/hero4.jpg" alt="Lab hero image 4" />
-            </div>
           </div>
 
           <!-- Overlay text (you can edit later) -->
           <div class="hero-overlay">
             <div class="container">
-              <h1 class="hero-title">Your Lab Name</h1>
-              <p class="hero-subtitle">A short tagline goes here</p>
+              <h1 class="hero-title">Lili Wang Lab</h1>
+              <p class="hero-subtitle">Dissecting and Targeting RNA metabolism dysregulation in leukemia and lymphoma</p>
             </div>
           </div>
 
@@ -70,7 +67,7 @@
       <!-- Intro -->
       <section class="section">
         <div class="container">
-          <h2 class="section-kicker">Your Lab</h2>
+          <h2 class="section-kicker">Lili Wang Lab</h2>
           <h3 class="section-title">Your headline / research theme</h3>
           <p class="section-text">
             Placeholder paragraph. Add your description later (affiliations, mission, methods, etc.).
@@ -117,8 +114,8 @@
       <div class="container footer-inner">
         <img class="footer-logo" src="images/footer-logo.png" alt="Institution logo" />
         <div class="footer-text">
-          <div>© Your Lab 2018–2025</div>
-          <div>Email: your-email@institution.edu</div>
+          <div>© Lili Wang Lab 2018–2025</div>
+          <div>Email: lw3282@cumc.columbia.edu</div>
         </div>
 
         <div class="footer-links">
