--- a/index.html
+++ b/index.html
@@ -68,9 +68,15 @@
       <section class="section">
         <div class="container">
           <h2 class="section-kicker">Lili Wang Lab</h2>
-          <h3 class="section-title">Your headline / research theme</h3>
+          <h3 class="section-title">Disecting and Targeting RNA metabolism dysregulation</h3>
           <p class="section-text">
-            Placeholder paragraph. Add your description later (affiliations, mission, methods, etc.).
+The Wang Lab at the Division of Hematology &amp; Oncology, Columbia University Irving Medical
+Center, studies how dysregulation of RNA splicing and modifications drives the development
+and progression of B cell malignancies, with a focus on chronic lymphocytic leukemia (CLL).
+Using integrative multi-omics approaches and patient-derived models, we aim to uncover how
+abnormal RNA regulation reshapes gene expression, tumor–microenvironment interactions, and
+therapeutic responses. Our goal is to translate mechanistic insights into clinically actionable
+biomarkers and treatment strategies for patients with B cell cancers.
           </p>
         </div>
       </section>
