--- a/research.html
+++ b/research.html
@@ -71,56 +71,35 @@ related B cell malignancies.
         </div>
       </section>
 
-      <!-- Optional: Research areas as clean cards (easy to expand) -->
-      <section class="section section-muted">
-        <div class="container">
-          <h2 class="section-title">Research Areas</h2>
-          <div class="cards">
-            <article class="card">
-              <h3 class="card-title">Theme 1</h3>
-              <p class="card-text">One short paragraph placeholder for Theme 1.</p>
-              <ul class="card-bullets">
-                <li>Key question / hypothesis</li>
-                <li>Methods or platforms</li>
-                <li>Example outcomes</li>
-              </ul>
-            </article>
-
-            <article class="card">
-              <h3 class="card-title">Theme 2</h3>
-              <p class="card-text">One short paragraph placeholder for Theme 2.</p>
-              <ul class="card-bullets">
-                <li>Key question / hypothesis</li>
-                <li>Methods or platforms</li>
-                <li>Example outcomes</li>
-              </ul>
-            </article>
-
-            <article class="card">
-              <h3 class="card-title">Theme 3</h3>
-              <p class="card-text">One short paragraph placeholder for Theme 3.</p>
-              <ul class="card-bullets">
-                <li>Key question / hypothesis</li>
-                <li>Methods or platforms</li>
-                <li>Example outcomes</li>
-              </ul>
-            </article>
-          </div>
-        </div>
-      </section>
-
       <!-- Other associated activities (mirrors the “Other associated activities” section idea) -->
       <section class="section">
         <div class="container">
           <h2 class="section-title">Other associated activities</h2>
+          <div class="list-card-title">Collaborative Network / Program</div>
+          <div class="list-card-text">
+The Wang Lab is closely working with physicians at <a class="nav-link-text" href="https://dolphine1209g.github.io/cll-program-at-columbia">CLL Program@Columbia</a>.
+The program has many clinical trials for patients with CLL and other lymphoid
+malignancies.
+          </div>
+        </div>
+      </section>
+    </main>
 
-          <div class="list-cards">
-            <a class="list-card" href="#" target="_blank" rel="noreferrer">
-              <div class="list-card-title">Affiliated Center / Core / Consortium</div>
-              <div class="list-card-text">
-                One line description placeholder (what it is + why it’s relevant).
-              </div>
-            </a>
+    <!-- Shared Footer -->
+    <footer class="site-footer">
+      <div class="container footer-inner">
+        <img class="footer-logo" src="images/footer-logo.png" alt="Institution logo" />
+        <div class="footer-text">
+          <div>© Wang Lab 2018–2025</div>
+          <div>Email: your-email@institution.edu</div>
+        </div>
+        <div class="footer-links">
+          <a href="#" aria-label="X / Twitter">X</a>
+          <a href="#" aria-label="LinkedIn">LinkedIn</a>
+        </div>
+      </div>
+    </footer>
 
-            <a class="list-card" href="#" target="_blank" rel="noreferrer">
-              <div class="list-card-title">Collaborative Network / Program</div>
+    <script src="script.js"></script>
+  </body>
+</html>
