--- a/publications.html
+++ b/publications.html
@@ -20,9 +20,9 @@
           <a href="research.html" class="nav-link">Research</a>
           <a href="team.html" class="nav-link">Team</a>
           <a href="publications.html" class="nav-link nav-link-active">Publication</a>
-          <a href="news.html" class="nav-link">News</a>
-          <a href="funding.html" class="nav-link">Funding</a>
-          <a href="contact.html" class="nav-link">Contact & Openings</a>
+          <a href="news.html" class="nav-link">News & Lab Activities</a>
+          <a href="support.html" class="nav-link">Support</a>
+          <a href="contact.html" class="nav-link">Contact</a>
         </nav>
 
         <button class="nav-toggle" aria-label="Open menu" aria-expanded="false">☰</button>
@@ -39,104 +39,72 @@
 
       <section class="section">
         <div class="container">
-          <div class="pub-controls">
-            <div>
-              <div class="pub-controls-label">SELECT Publication</div>
-              <select class="pub-select" id="pubSelect" aria-label="Jump to publication section">
-                <option value="">Jump to…</option>
-                <option value="#research-articles">Research Articles</option>
-                <option value="#reviews">Reviews</option>
-                <option value="#earlier-years">Earlier Years</option>
-              </select>
-            </div>
-
-            <div class="pub-controls-right">
-              <a class="pub-link" href="#" target="_blank" rel="noreferrer">
-                click here for full publication list
-              </a>
-              <div class="pub-note">
-                Lab members in <strong>bold</strong>; # co-first author; ^ co-senior author.
-              </div>
-            </div>
-          </div>
-
           <!-- Research Articles -->
-          <h2 id="research-articles" class="pub-section-title">Research Articles</h2>
+          <h2 id="research-articles" class="pub-section-title">Selected Articles</h2>
           <ul class="pub-list">
             <li class="pub-item">
               <span class="pub-citation">
-                <strong>LastName A</strong>, LastName B#, LastName C, … Wang L^.
-                Title of the paper goes here. <em>Journal</em>. 2026.
-              </span>
-              <span class="pub-actions">
-                <a href="#" target="_blank" rel="noreferrer">PubMed</a>
-                <a href="#" target="_blank" rel="noreferrer">PDF</a>
+Iyer P, Zhang B, Liu T, Jin M, Hart K, Zhang J, Siegert V, Remke M, Wang X, Yu L,
+Song J, Venkataraman G, Chan WC, Jia Z, Buchner M, Siddiqi T, Rosen ST, Danilov
+A, <strong>Wang L.</strong> MGA deletion leads to Richter's transformation via modulation of
+mitochondrial OXPHOS. Sci Transl Med. 2024.
               </span>
             </li>
-
             <li class="pub-item">
               <span class="pub-citation">
-                LastName A, <strong>LastName B</strong>, LastName C. Another title.
-                <em>Journal</em>. 2025.
-              </span>
-              <span class="pub-actions">
-                <a href="#" target="_blank" rel="noreferrer">PubMed</a>
+Cusan M, Shen H, Zhang B, Liao A, Yang L, Jin M, Fernandez M, Iyer P, Wu Y, Hart K,
+Gutierrez C, Nik S, Pruett-Miller SM, Stark J, Obeng E, Bowman TV, Wu CJ, Lin
+RJ, <strong>Wang L.</strong> SF3B1 mutation and ATM deletion co-drive leukemogenesis via
+centromeric R-loop dysregulation. J Clin Invest 2023.
               </span>
             </li>
-
             <li class="pub-item">
               <span class="pub-citation">
-                LastName A, LastName B. Title. <em>Journal</em>. 2024.
+Cusan M, Shen H, Zhang B, Liao A, Yang L, Jin M, Fernandez M, Iyer P, Wu Y, Hart K,
+Gutierrez C, Nik S, Pruett-Miller SM, Stark J, Obeng E, Bowman TV, Wu CJ, Lin
+RJ, <strong>Wang L.</strong> SF3B1 mutation and ATM deletion co-drive leukemogenesis via
+centromeric R-loop dysregulation. J Clin Invest 2023.
               </span>
-              <span class="pub-actions">
-                <a href="#" target="_blank" rel="noreferrer">PubMed</a>
+            </li>
+            <li class="pub-item">
+              <span class="pub-citation">
+Wu Y, Jin M, Fernandez M, Fernandez M, Hart KL, Liao A, Ge X, Fernandes SM,
+McDonald T, Chen Z, Röth D, Ghoda LY, Marcucci G, Kalkum M, Pillai RK, Danilov
+AV, Li JJ, Chen J, Brown JR, Rosen ST, Siddiqi T, <strong>Wang L.</strong> METTL3-mediated m6A
+modification controls splicing factor abundance and contributes to aggressive CLL.
+Blood Cancer Discov. 2023.
+              </span>
+            </li>
+            <li class="pub-item">
+              <span class="pub-citation">
+Yi S, Yan Y, Jin M, Bhattacharya S, Wang Y, Wu Y, Yang L, Gine E, Clot G, Chen L, Yu
+Y, Zou D, Wang J, Phan A, Cui R, Li F, Sun Q, Zhai Q, Wang T, Yu Z, Liu L, Liu W, Lyv
+R, Sui W, Huang W, Xiong W, Wang H, Li C, Xiao Z, Hao M, Wang J, Chen gT, Bea S,
+Herrera A, Danilov A, Campo E, Ngo V, Qiu L, <strong>Wang L.</strong> Genomic and transcriptomic
+profiling reveals distinct molecular subsets associated with outcomes in mantle cell
+lymphoma. J Clin Invest 2022.
+              </span>
+            </li>
+            <li class="pub-item">
+              <span class="pub-citation">
+Yin S, Gambe R, Sun, J, Martinez, AZ, Cartun JZ, Regis, F, Wan Y, Fan, J, Brooks, AN,
+Herman SE, ten Hacken E, Taylor-Weiner, A, Rassenti L, Ghia EM, Kipps TJ, Obeng
+EA, Cibulaskis C, Neuberg D, Campagna DR, Fleming MD, Ebert BL, Wiestner A,
+Leshchiner I, DeCaprio JA, Getz G, Reed R, Carrasco RD, Wu CJ, <strong>Wang L.</strong> A murine
+model of chronic lymphocytic leukemia based on B cell-restricted expression of Sf3b1
+mutation and Atm deletion. Cancer Cell 2019.
+              </span>
+            </li>
+            <li class="pub-item">
+              <span class="pub-citation">
+<strong>Wang L</strong>, Lawrence MS, Wan Y, Stojanov P, Sougnez C, Stevenson K, Werner L,
+Sivachenko A, Deluca DS, Zhang L, Zhang W, Vartanov AR, Fernandes SM, Goldstein
+NR, Folco EG, Cibulskis K, Tesar B, Sievers QL, Shefler E, Gabriel S, Hacohen N, Reed
+R, Meyerson M, Golub TR, Lander ES, Neuberg D, Brown JR, Getz G, Wu CJ. SF3B1
+and other novel cancer genes in chronic lymphocytic leukemia. N Engl J Med, 2011.
               </span>
             </li>
           </ul>
-
-          <!-- Reviews -->
-          <h2 id="reviews" class="pub-section-title">Reviews</h2>
-          <ul class="pub-list">
-            <li class="pub-item">
-              <span class="pub-citation">
-                <strong>LastName A</strong>, LastName B. Review title. <em>Journal</em>. 2025.
-              </span>
-              <span class="pub-actions">
-                <a href="#" target="_blank" rel="noreferrer">PubMed</a>
-              </span>
-            </li>
-          </ul>
-
-          <!-- Earlier years -->
-          <h2 id="earlier-years" class="pub-section-title">2010–2023</h2>
-
-          <details class="pub-year" open>
-            <summary>2023</summary>
-            <ul class="pub-list">
-              <li class="pub-item">
-                <span class="pub-citation">
-                  LastName A#, <strong>LastName B</strong>#. Title. <em>Journal</em>. 2023.
-                </span>
-                <span class="pub-actions">
-                  <a href="#" target="_blank" rel="noreferrer">PubMed</a>
-                </span>
-              </li>
-            </ul>
-          </details>
-
-          <details class="pub-year">
-            <summary>2022</summary>
-            <ul class="pub-list">
-              <li class="pub-item">
-                <span class="pub-citation">
-                  LastName A, LastName B. Title. <em>Journal</em>. 2022.
-                </span>
-                <span class="pub-actions">
-                  <a href="#" target="_blank" rel="noreferrer">PubMed</a>
-                </span>
-              </li>
-            </ul>
-          </details>
 
           <div class="pub-backtotop">
             <a href="#top" onclick="window.scrollTo({top: 0, behavior: 'smooth'}); return false;">Back to Top</a>
