--- a/research.html
+++ b/research.html
@@ -20,9 +20,9 @@
           <a href="research.html" class="nav-link">Research</a>
           <a href="team.html" class="nav-link">Team</a>
           <a href="publications.html" class="nav-link">Publication</a>
-          <a href="news.html" class="nav-link">News</a>
-          <a href="funding.html" class="nav-link">Funding</a>
-          <a href="contact.html" class="nav-link">Contact & Openings</a>
+          <a href="news.html" class="nav-link">News & Lab Activities</a>
+          <a href="support.html" class="nav-link">Support</a>
+          <a href="contact.html" class="nav-link">Contact</a>
         </nav>
 
         <button class="nav-toggle" aria-label="Open menu" aria-expanded="false">
