--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a href="publications.html" class="nav-link">Publication</a>
           <a href="news.html" class="nav-link">News & Lab Activities</a>
           <a href="support.html" class="nav-link">Support</a>
-          <a href="contact.html" class="nav-link">Contact</a>
+          <a href="contact.html" class="nav-link">Contact & Openings</a>
         </nav>
 
         <button class="nav-toggle" aria-label="Open menu" aria-expanded="false">
@@ -89,11 +89,11 @@ biomarkers and treatment strategies for patients with B cell cancers.
           <ul class="news-list">
             <li class="news-item">
               <span class="news-date">DEC 2025:</span>
-              <span class="news-text">Placeholder news item — add later.</span>
+              <span class="news-text">Wang Lab attended ASH 2025 Orlando.</span>
             </li>
             <li class="news-item">
-              <span class="news-date">OCT 2025:</span>
-              <span class="news-text">Placeholder news item — add later.</span>
+              <span class="news-date">Nov 2025:</span>
+              <span class="news-text">Wang Lab relocated to Columbia University.</span>
             </li>
           </ul>
         </div>
@@ -104,12 +104,12 @@ biomarkers and treatment strategies for patients with B cell cancers.
         <div class="container">
           <h2 class="section-title">Join us!</h2>
           <p class="section-text">
-            Placeholder text about openings. Add roles, how to apply, and what to include later.
+            We are hiring for postdoctoral fellows and computational biologists.
           </p>
 
           <div class="cta-row">
-            <a class="btn" href="mailto:your-email@institution.edu">Email us</a>
-            <a class="btn btn-outline" href="#openings">Openings</a>
+            <a class="btn" href="mailto:lw3282@cumc.columbia.edu">Email us</a>
+            <a class="btn btn-outline" href="contact.html">Openings</a>
           </div>
         </div>
       </section>
@@ -118,15 +118,34 @@ biomarkers and treatment strategies for patients with B cell cancers.
     <!-- Footer -->
     <footer class="site-footer">
       <div class="container footer-inner">
-        <img class="footer-logo" src="images/footer-logo.png" alt="Institution logo" />
+        <img
+          class="footer-logo"
+          src="images/institution-logo.png"
+          alt="Institution logo"
+        />
+
         <div class="footer-text">
-          <div>© Lili Wang Lab 2018–2025</div>
-          <div>Email: lw3282@cumc.columbia.edu</div>
+          <div>© Lili Wang Lab 2017–2026</div>
+          <div>Email: <a href="mailto:lw3282@cumc.columbia.edu">lw3282@cumc.columbia.edu</a></div>
         </div>
 
         <div class="footer-links">
-          <a href="#" aria-label="X / Twitter">X</a>
-          <a href="#" aria-label="LinkedIn">LinkedIn</a>
+          <a
+            href="https://twitter.com/LiliWangLab"
+            aria-label="X / Twitter"
+            target="_blank"
+            rel="noopener"
+          >
+            X
+          </a>
+          <a
+            href="https://www.linkedin.com/in/lili-wang-448a1715/"
+            aria-label="LinkedIn"
+            target="_blank"
+            rel="noopener"
+          >
+            LinkedIn
+          </a>
         </div>
       </div>
     </footer>
