--- a/research.html
+++ b/research.html
@@ -22,7 +22,7 @@
           <a href="publications.html" class="nav-link">Publication</a>
           <a href="news.html" class="nav-link">News & Lab Activities</a>
           <a href="support.html" class="nav-link">Support</a>
-          <a href="contact.html" class="nav-link">Contact</a>
+          <a href="contact.html" class="nav-link">Contact & Openings</a>
         </nav>
 
         <button class="nav-toggle" aria-label="Open menu" aria-expanded="false">
@@ -85,17 +85,37 @@ malignancies.
       </section>
     </main>
 
-    <!-- Shared Footer -->
+    <!-- Footer -->
     <footer class="site-footer">
       <div class="container footer-inner">
-        <img class="footer-logo" src="images/footer-logo.png" alt="Institution logo" />
+        <img
+          class="footer-logo"
+          src="images/institution-logo.png"
+          alt="Institution logo"
+        />
+
         <div class="footer-text">
-          <div>© Wang Lab 2018–2025</div>
-          <div>Email: your-email@institution.edu</div>
+          <div>© Lili Wang Lab 2017–2026</div>
+          <div>Email: <a href="mailto:lw3282@cumc.columbia.edu">lw3282@cumc.columbia.edu</a></div>
         </div>
+
         <div class="footer-links">
-          <a href="#" aria-label="X / Twitter">X</a>
-          <a href="#" aria-label="LinkedIn">LinkedIn</a>
+          <a
+            href="https://twitter.com/LiliWangLab"
+            aria-label="X / Twitter"
+            target="_blank"
+            rel="noopener"
+          >
+            X
+          </a>
+          <a
+            href="https://www.linkedin.com/in/lili-wang-448a1715/"
+            aria-label="LinkedIn"
+            target="_blank"
+            rel="noopener"
+          >
+            LinkedIn
+          </a>
         </div>
       </div>
     </footer>
