--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
             <div class="card">
               <h3>Join the lab</h3>
               <p class="muted">
-We are actively recruiting highly motivated graduate students and postdoctoral scientists who are excited to tackle fundamental and translational questions at the forefront of RNA biology and cancer. Our lab investigates how dysregulation of RNA metabolism drives oncogenesis, combining cutting-edge approaches in RNA splicing, RNA epigenetics, cancer biology and high-throughput genetic screening. Trainees in our group work in a highly interdisciplinary, collaborative environment and gain hands-on experience with innovative technologies to address clinically relevant problems with clinical impact.
+We are actively recruiting highly motivated graduate students and postdoctoral scientists who are excited to tackle fundamental and translational questions at the forefront of RNA biology and cancer. Our lab investigates how dysregulation of RNA metabolism drives oncogenesis, combining cutting-edge approaches in RNA splicing, RNA epigenetics, cancer biology and high-throughput genetic screening. Trainees in our group work in a highly interdisciplinary, collaborative environment and gain hands-on experience with innovative technologies to address clinically relevant problems with direct impact on leukemia and lymphoma.
               </p>
 
               <p class="muted">
