--- a/contact.html
+++ b/contact.html
@@ -66,9 +66,9 @@
     </header>
 
     <main id="contact">
-      <section class="section">
+      <section class="page-hero">
         <div class="container">
-          <h2 class="section-kicker">Contact</h2>
+          <h1 class="page-title">Contact & Openings</h1>
         </div>
       </section>
 
