--- a/news.html
+++ b/news.html
@@ -117,10 +117,9 @@
 
     <main id="news">
       <!-- Page header -->
-      <section class="section">
+      <section class="page-hero">
         <div class="container">
-          <h2 class="section-kicker">News &amp; Lab Activities</h2>
-          <h1 class="section-title">Latest updates from the Wang Lab</h1>
+          <h1 class="page-title">News &amp; Lab Activities</h1>
         </div>
       </section>
 
