--- a/support.html
+++ b/support.html
@@ -69,9 +69,13 @@
     </header>
 
     <main id="support">
+      <section class="page-hero">
+        <div class="container">
+          <h1 class="page-title">Support</h1>
+        </div>
+      </section>
       <section class="section">
         <div class="container">
-          <h2 class="section-kicker">Support</h2>
           <h1 class="section-title">Our Supporters</h1>
           <p class="section-text">
 We would like to thank the people and organizations that have supported our research:
